force-app/main/default/objects/ILF_Coverage_Factor__c/ILF_Coverage_Factor__c.object-meta.xml
<CustomObject>
    <label>ILF / Limits Factor</label>
    <nameField>
        <label>ILF / Limit Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ILF / Limits Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>