force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Coverage_Max_Per_Claim__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Max_Per_Claim__c</fullName>
    <label>Coverage Max Per Claim</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>