force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Factor_Value__c.field-meta.xml
<CustomField>
    <fullName>Factor_Value__c</fullName>
    <label>Factor Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>