force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Full_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Full_Coverage__c</fullName>
    <label>Aggregate Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>