force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Is_10X10_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Is_10X10_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this limit is for 10x10 then it should be checked.</description>
    <label>Is 10X10 Coverage</label>
    <type>Checkbox</type>
</CustomField>