force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Is_5X5_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Is_5X5_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 5X5 Coverage</label>
    <type>Checkbox</type>
</CustomField>