force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Is_Excess_Value_Zero__c.field-meta.xml
<CustomField>
    <fullName>Is_Excess_Value_Zero__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Yes then Excess amount will be zero in Excess calculation otherwise another formula will be use.</description>
    <label>Is Excess Value Zero</label>
    <type>Checkbox</type>
</CustomField>