force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Limit_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Limit_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Limit External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>