force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Lowest_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lowest Coverage</label>
    <type>Checkbox</type>
</CustomField>