force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Mid_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Mid_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>1. It is using for Excess calculation.
2. Only one coverage could be checked for one Master record.</inlineHelpText>
    <label>Mid Coverage</label>
    <type>Checkbox</type>
</CustomField>