force-app/main/default/objects/ILF_Coverage_Factor__c/fields/OldLimit__c.field-meta.xml
<CustomField>
    <fullName>OldLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OldLimit</label>
    <type>Checkbox</type>
</CustomField>