force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Percentage_5X5_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Percentage_5X5_Step_2__c</fullName>
    <label>Percentage 5X5 Step 2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>