force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Percnt_amt_5X5_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Percnt_amt_5X5_Step_1__c</fullName>
    <formula>Premium_Rate_5X5__c * Percentage_5X5_Step_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percnt amt 5X5 Step 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>