force-app/main/default/objects/ILF_Coverage_Factor__c/fields/Premium_Rate_5X5__c.field-meta.xml
<CustomField>
    <fullName>Premium_Rate_5X5__c</fullName>
    <label>Premium Rate 5X5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>