force-app/main/default/objects/ILF_Coverage_Factor__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <formula>Master_Factor__r.To_Date__c</formula>
    <label>To Date</label>
    <type>Date</type>
</CustomField>