force-app/main/default/objects/ILF_Coverage_Factor__c/fields/X4x1_Rate__c.field-meta.xml
<CustomField>
    <fullName>X4x1_Rate__c</fullName>
    <label>4x1 Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>