force-app/main/default/objects/ILF_Coverage_Factor__c/validationRules/Factor_value_greater_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Factor_value_greater_than_Zero</fullName>
    <active>true</active>
    <description>This field must be greater than zero because value is using for divide in Premium calculation.</description>
    <errorConditionFormula>Factor_Value__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Factor_Value__c</errorDisplayField>
    <errorMessage>Value must be greater than Zero.</errorMessage>
</ValidationRule>