force-app/main/default/objects/ILF_Coverage_Factor__c/validationRules/Lowest_Coverage_not_exceed_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Lowest_Coverage_not_exceed_1</fullName>
    <active>true</active>
    <description>1. One master record has only one Lowest coverage 
2. Current coverage could be unchecked.</description>
    <errorConditionFormula>Master_Factor__r.Lowest_Coverage_Count__c &gt; 0 &amp;&amp; 
ISCHANGED(Lowest_Coverage__c) &amp;&amp; 
PRIORVALUE(Lowest_Coverage__c) &lt;&gt; true</errorConditionFormula>
    <errorDisplayField>Lowest_Coverage__c</errorDisplayField>
    <errorMessage>One Coverage has already selected for Lowest coverage.</errorMessage>
</ValidationRule>