force-app/main/default/objects/ILF_Coverage_Factor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Factor_Value__c</columns>
    <columns>Is_10X10_Coverage__c</columns>
    <columns>Is_5X5_Coverage__c</columns>
    <columns>Premium_Rate_5X5__c</columns>
    <columns>OldLimit__c</columns>
    <columns>X4x1_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>